Fixed Expense Data display Added Monthly Data Display (List only) Category Spinner temporarily accepts only hardcoded values Added AnyChart dependencies Removed implementation 'com.android.support:design:28.0.0' line

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,13 @@
         <item>2029</item>
         <item>2030</item>
     </string-array>
+    <string-array name="Cats">
+        <item>Books And Stationery</item>
+        <item>Food</item>
+        <item>Cloth Wash</item>
+        <item>Recharge</item>
+        <item>Party</item>
+    </string-array>
+    <string name="OpenDrawer">Open Navigation Drawer</string>
+    <string name="CloseDrawer">Close Navigation Drawer</string>
 </resources>
