Converted all layouts from RelativeLayout to ConstraintLayout. Improved (Month, Year) toast to display month name and year.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,9 @@
     </string-array>
     <string name="OpenDrawer">Open Navigation Drawer</string>
     <string name="CloseDrawer">Close Navigation Drawer</string>
+    <string name="to">To:</string>
+    <string name="from">From:</string>
+    <string name="month">Month:</string>
+    <string name="year">Year:</string>
+    <string name="view_data">View Data</string>
 </resources>
