Reduced code multiplicity of DateToString(). ActivityViewTarget 90% complete.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="month">Month:</string>
     <string name="year">Year:</string>
     <string name="view_data">View Data</string>
+    <string name="tap_to_edit">Tap on an item to edit it.</string>
 </resources>
